# manageur

./: .gitignore  FINAL.md  README.md  pyproject.toml  setup.sh
.github/workflows/: pipeline.yaml  zip_src.yaml
hahahaha/: README.md
hahahaha/src/: main.py
scripts/: export.bash  quick-update.bash  setup_with_curl_zip.bash
src/: __init__.py  main.py  setup.sh
src/_home/: bashrc  vars
src/_home/scripts/: manageur
src/gui/: main.py  requirements.txt
src/modules/: ___template___.py  __init__.py  script_runner.py  settings.py  setup.py
