[tool.poetry]
name = "manageur"
version = "0.1.0"
description = ""
authors = ["pkaodev <polsson.development@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.7.0"
poethepoet = "^0.27.0"


[tool.poe.tasks]
gui = "python src/gui/main.py"
export = "poetry export --without-hashes --format=requirements.txt --output=src/gui/requirements.txt"