[tool.poetry]
name = "manageur"
version = "0.1.0"
description = ""
authors = ["pkaodev <polsson.development@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.7.0"
poethepoet = "^0.27.0"


[tool.poe.tasks]
gui = "scripts/gui.bash"
export = "scripts/export.bash"
quick-update = "scripts/quick-update.bash"

[tool.poe.tasks.pushy]
sequence = ["export", "quick-update"]
